# polymarket-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/test/: baseline.yaml  phase1.yaml  phase2.yaml  phase3.yaml
deploy/: env.example  polymarket-agent.service
docs/: math_for_trading_polymarket.txt  strategy-research.md
docs/plans/: 2026-02-25-polymarket-agent-phase1.md  2026-02-25-polymarket-agent-phase2.md  2026-02-25-polymarket-agent-trader-design.md  2026-02-26-polymarket-agent-phase3.md  2026-02-26-polymarket-agent-phase4.md  2026-02-26-polymarket-agent-post-design-doc.md  2026-02-27-exit-manager-design.md  2026-02-27-exit-manager-plan.md  2026-02-28-focus-trading.md  2026-02-28-ta-and-news.md  2026-03-03-paper-trading-test-plan-design.md  2026-03-03-paper-trading-test-plan.md  2026-03-03-strategy-research-improvements.md  2026-03-04-pnl-improvements-tradingagents.md  2026-03-05-date-curve-trader-design.md  2026-03-05-market-filtering-max-tokens.md  2026-03-05-sports-derivative-trader-design.md  2026-03-06-strategy-bugfix-plan.md  (+2 more)
reviews/: review-20260226-135732-e16f45.md  review-20260226-171018-75aae2.md
scripts/: autotune.sh  com.polymarket-agent.autotune.plist  compare_test_runs.py  run_experiment.sh
src/polymarket_agent/: cli.py  (+8 more)
tests/: test_aggregator.py  test_ai_analyst.py  test_arb_bregman.py  test_arb_dependency.py  test_arb_execution_validator.py  test_arb_frank_wolfe.py  test_arbitrageur.py  test_autotune.py  test_backtest_engine.py  test_backtest_historical.py  test_backtest_metrics.py  test_cache.py  test_cli.py  test_client.py  test_config.py  test_config_reload.py  test_cross_platform_arb.py  test_dashboard_api.py  test_date_curve_trader.py  test_db.py  test_debate.py  test_evaluate.py  test_exit_manager.py  test_external_prices.py  test_indicators.py  test_integration.py  test_live_trader.py  test_market_maker.py  test_mcp_server.py  test_models.py  test_monitoring_alerts.py  test_monitoring_db.py  test_monitoring_logging.py  test_news_provider.py  test_orchestrator.py  test_orders.py  test_paper_trader.py  test_position_sizing.py  test_position_sizing_execution_kelly.py  test_reflection.py  (+8 more)
(+46 files in other folders)
