[project]
name = "polymarket-agent"
version = "1.0.0"
description = "Agent-friendly auto-trading pipeline for Polymarket"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Polymarket Agent Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "anthropic>=0.84.0",
    "mcp>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.optional-dependencies]
live = ["py-clob-client>=0.0.1"]
dashboard = ["fastapi>=0.110", "uvicorn>=0.29"]
openai = ["openai>=1.0"]

[project.urls]
Repository = "https://github.com/polymarket-agent/polymarket-agent"

[project.scripts]
polymarket-agent = "polymarket_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true
strict = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20250915",
    "openai>=1.0",
]
